--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="form-container">
+    <div class="form-container" id="form">
       <form>
         <div class="form-group">
-          <label for="numElements">Number of elements:</label>
-          <input type="number" id="numElements" name="numElements" required />
+          <label>Number of elements:</label>
+          <input type="number" id="numElements" value="1000" required />
+          <label>Min number of elements:</label>
+          <input type="number" id="minNumElements" value="1" required />
+          <label>Max number of elements:</label>
+          <input type="number" id="maxNumElements" value="10000" required />
         </div>
         <div class="form-group checkbox-group">
-          <label for="noRepetition">No repetition:</label>
-          <input type="checkbox" id="noRepetition" name="noRepetition" />
+          <label>No repetition:</label>
+          <input type="checkbox" id="repetition" checked />
         </div>
         <div class="form-group checkbox-group">
           <label>Test:</label>
-          <input type="checkbox" id="test1" name="test1" />
-          <label for="test1">Sorted</label>
-          <input type="checkbox" id="test2" name="test2" />
-          <label for="test2">Test 2</label>
-          <input type="checkbox" id="test3" name="test3" />
-          <label for="test3">Test 3</label>
+          <input type="checkbox" id="sorted" checked />
+          <label>Sorted</label>
+          <input type="checkbox" id="test2" />
+          <label>Test 2</label>
+          <input type="checkbox" id="test3" />
+          <label>Test 3</label>
         </div>
         <br /><br />
-        <input type="submit" value="Submit" />
+        <input type="submit" />
       </form>
     </div>
 
