--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <label>Test:</label>
           <input type="checkbox" id="sorted" checked />
           <label>Sorted</label>
-          <input type="checkbox" id="test2" />
-          <label>Test 2</label>
+          <input type="checkbox" id="buffer" />
+          <label>Buffer</label>
           <input type="checkbox" id="test3" />
           <label>Test 3</label>
         </div>
