added funcitonal checkbox

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <div class="form-group checkbox-group">
           <label class="labelMainTitle">Algorithm:</label>
-          <input type="radio" id="clone" name="algorithm" checked />
+          <input type="checkbox" id="clone" name="algorithm" checked />
           <label>Clone Array</label>
         </div>
         <div class="form-group checkbox-group">
-          <input type="radio" id="multiply" name="algorithm" disabled />
+          <input type="checkbox" id="multiply" name="algorithm" checked />
           <label>Multiply Array</label>
         </div>
         <hr class="hr-divider" />
